Improved vignette. Multiple methods for background correction and log2 normalization.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/blima@92597 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,9 @@ export("quantileNormalize")
 export("doTTests")
 export("doProbeTTests")
 export("createSummarizedMatrix")
+export("backgroundChannelSubtract")
+export("selectedChannelTransform")
+export("xieBacgroundCorrect")
 importMethodsFrom(Biobase, pData)
 importMethodsFrom(BiocGenerics, cbind, colnames, is.unsorted, ncol,
                   nrow, order, paste, rbind, sapply, sort, table,
