--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: blima
 Type: Package
-Title: Package for analysis of Illumina microarrays bead level data. Package blima includes several bead level algorithms to support bead level and probe level analysis of the data. It utilizes its own method for background correction, performs variance stabilizing method on the bead level and bead level quantile normalization. It also provides some basic methods for differential expression testing.
-Version: 0.99.59
-Date: 2014-07-17
+Title: Package for the preprocessing and analysis of the Illumina microarrays on the detector (bead) level.
+Version: 0.99.61
+Date: 2014-08-13
 Author: Vojtech Kulvait
 Maintainer: Vojtech Kulvait <kulvait@gmail.com>
-Description: Analysis of bead level data.
+Description: Package blima includes several algorithms for the preprocessing of Illumina microarray data. It focuses to the bead level analysis and provides novel approach to the quantile normalization of the vectors of unequal lengths. It provides variety of the methods for background correction including background subtraction, RMA like convolution and background outlier removal. It also implements variance stabilizing transformation on the bead level. There are also implemented methods for data summarization. It also provides the methods for performing T-tests on the detector (bead) level and on the probe level for differential expression testing.
 License: GPL-3
 LazyLoad: yes
 Depends: R(>= 3.0.0)
