Added new functionality to perform quantileNormalize more efficiently and faster by calling c++ code interpolateSortedVectorRcpp_
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/blima@124895 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
+useDynLib(blima)
+importFrom(Rcpp, evalCpp)
 export("chipArrayStatistics")
 export("log2TransformPositive")
 export("bacgroundCorrect")
