--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,17 @@ Encoding: UTF-8
 Package: blima
 Type: Package
 Title: Tools for the preprocessing and analysis of the Illumina microarrays on the detector (bead) level
-Version: 1.11.1
-Date: 2017-09-14
+Version: 1.11.12
+Date: 2017-09-23
 Author: Vojtěch Kulvait
 Maintainer: Vojtěch Kulvait <kulvait@gmail.com>
 Description: Package blima includes several algorithms for the preprocessing of Illumina microarray data. It focuses to the bead level analysis and provides novel approach to the quantile normalization of the vectors of unequal lengths. It provides variety of the methods for background correction including background subtraction, RMA like convolution and background outlier removal. It also implements variance stabilizing transformation on the bead level. There are also implemented methods for data summarization. It also provides the methods for performing T-tests on the detector (bead) level and on the probe level for differential expression testing.
 License: GPL-3
 LazyLoad: yes
-Depends: R(>= 3.0.0)
+Depends: R(>= 3.3)
 Imports: beadarray(>= 2.0.0), Biobase(>= 2.0.0), Rcpp (>= 0.12.8), BiocGenerics, grDevices, stats, graphics
 LinkingTo: Rcpp
-Suggests: xtable, blimaTestingData, BiocStyle, illuminaHumanv4.db, lumi
+Suggests: xtable, blimaTestingData, BiocStyle, illuminaHumanv4.db, lumi, knitr
 URL: https://bitbucket.org/kulvait/blima
-biocViews: Microarray, Preprocessing, Normalization
+biocViews: Microarray, Preprocessing, Normalization, DifferentialExpression, GeneRegulation, GeneExpression
+VignetteBuilder: knitr
